--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,81 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <p class="bg-gray-500">This is text</p>
+    <header class="">
+        <nav class="bg-orange-50">
+            <div class="flex justify-between container mx-auto items-center py-7">
+                <div>
+                    <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg">Blog</button>
+                </div>
+                <div class="flex items-center text-2xl font-semibold gap-3"><img src="./assets/logo.png" alt=""> Donate
+                    Bangladesh</div>
+                <div class="flex items-center font-bold gap-2"><img src="./assets/coin.png" alt="">5500 BDT</div>
+            </div>
+        </nav>
+        <div class="text-center space-x-4 mt-16">
+            <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donation</button>
+            <button class="px-7 py-2 border border-gray-200 rounded-md font-bold text-lg">History</button>
+        </div>
+    </header>
+    <!-- -----------Main section Start ----------  -->
+    <main class="mt-9 container mx-auto px-10 space-y-6">
+        <!-- 1st Card Start  -->
+        <div class="flex border rounded-3xl">
+            <div class="w-[45%] px-8 py-8">
+                <img class="w-full" src="./assets/noakhali.png" alt="">
+            </div>
+            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+                <button class="px-4 w-44 py-2 bg-gray-200 rounded-md font-bold text-lg flex"><img src="./assets/coin.png" alt=""> 0 BDT</button>
+
+                <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
+
+                <p class=""> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
+
+                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-full" />
+
+                <button class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate Now</button>
+            </div>
+        </div>
+        <!-- 2nd Card Start  -->
+        <div class="flex border rounded-3xl">
+            <div class="w-[45%] px-8 py-8">
+                <img class="w-full" src="./assets/feni.png" alt="">
+            </div>
+            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+                <button class="px-4 w-44 py-2 bg-gray-200 rounded-md font-bold text-lg flex"><img src="./assets/coin.png" alt=""> 600 BDT</button>
+
+                <p class="text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</p>
+
+                <p class="">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
+
+                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-full" />
+
+                <button class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate Now</button>
+            </div>
+        </div>
+        <!-- 3rd Card Start  -->
+        <div class="flex border rounded-3xl">
+            <div class="w-[45%] px-8 py-8">
+                <img class="w-full" src="./assets/quota-protest.png" alt="">
+            </div>
+            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+                <button class="px-4 w-44 py-2 bg-gray-200 rounded-md font-bold text-lg flex"><img src="./assets/coin.png" alt=""> 2400 BDT</button>
+
+                <p class="text-xl font-bold">Aid for Injured in the Quota Movement</p>
+
+                <p class="">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
+
+                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full max-w-full" />
+
+                <button class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate Now</button>
+            </div>
+        </div>
+    </main>
+
+    <script src="uniti"></script>
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
