--- a/blog.html
+++ b/blog.html
@@ -11,20 +11,21 @@
 
 <body>
     <header>
-    <nav class="bg-orange-50">
-        <div class="flex justify-between container mx-auto items-center py-7">
-            <div>
-                <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg">Blog</button>
+        <nav class="bg-orange-50">
+            <div class="flex justify-between container mx-auto items-center py-7">
+                <div>
+                    <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg" id="home-page">Home</button>
+                </div>
+                <div class="flex items-center text-2xl font-semibold gap-3"><img src="./assets/logo.png" alt=""> Donate
+                    Bangladesh</div>
+                <div class="flex items-center font-bold gap-2"><img src="./assets/coin.png" alt="">5500 BDT</div>
             </div>
-            <div class="flex items-center text-2xl font-semibold gap-3"><img src="./assets/logo.png" alt=""> Donate
-                Bangladesh</div>
-            <div class="flex items-center font-bold gap-2"><img src="./assets/coin.png" alt="">5500 BDT</div>
-        </div>
-    </nav>
+        </nav>
     </header>
 
     <main class="container mx-auto space-y-1">
-        <h1 class="text-5xl font-semibold my-12">Important FAQ <img src="./assets/faq.png" class="w-10 inline" alt=""></h1>
+        <h1 class="text-5xl font-semibold my-12">Important FAQ <img src="./assets/faq.png" class="w-10 inline" alt="">
+        </h1>
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
@@ -41,19 +42,28 @@
         </div>
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?</div>
+            <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why
+                is it useful?</div>
             <div class="collapse-content">
                 <p>hello</p>
             </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles using the DOM?</div>
+            <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
+                using the DOM?</div>
             <div class="collapse-content">
                 <p>hello</p>
             </div>
         </div>
     </main>
+
+    <script>
+        document.getElementById('home-page').addEventListener('click', function () {
+            window.location.href = "../index.html";
+            console.log('home click')
+        })
+    </script>
 </body>
 
 </html>
