ui design complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="">
+    <header class="sticky top-0 ">
         <nav class="bg-orange-50">
             <div class="flex justify-between container mx-auto items-center py-7">
                 <div>
@@ -26,7 +26,7 @@
         </nav>
         <div class="text-center space-x-4 mt-16">
             <button id="change-btn-1" class="px-7 py-2 border border-gray-200 bg-[#B4F461] rounded-md font-bold text-lg">Donation</button>
-            <button id="change-btn-2" class="px-7 py-2 border border-gray-200 rounded-md font-bold text-lg">History</button>
+            <button id="change-btn-2" class="px-7 py-2 border border-gray-200  rounded-md font-bold text-lg">History</button>
         </div>
     </header>
     <!-- -----------Main section Start ----------  -->
