--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="sticky top-0 ">
         <nav class="bg-orange-50">
-            <div class="flex justify-between container mx-auto items-center py-7">
+            <div class="flex flex-col md:flex md:flex-row md:justify-between container mx-auto items-center py-7 space-y-3 md:space-y-0">
                 <div>
                     <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg" id="blog-page">Blog</button>
                 </div>
@@ -33,11 +33,11 @@
     <main >
         <div id="donation-part" class="mt-9 container mx-auto px-10 space-y-6">
             <!-- 1st Card Start  -->
-        <div class="flex border rounded-3xl">
-            <div class="w-[45%] px-8 py-8">
+        <div class="flex flex-col md:flex-row border rounded-3xl pb-5 md:pb-0">
+            <div class="w-full md:w-[45%] px-8 py-8">
                 <img class="w-full" src="./assets/noakhali.png" alt="">
             </div>
-            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3">
                 <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
                     <img src="./assets/coin.png" alt="">
                     <button class=" font-bold text-lg flex"> <span id="text-value-1">0</span> BDT</button>
@@ -59,11 +59,11 @@
             </div>
         </div>
         <!-- 2nd Card Start  -->
-        <div class="flex border rounded-3xl">
-            <div class="w-[45%] px-8 py-8">
+        <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
+            <div class="w-full md:w-[45%] px-8 py-8">
                 <img class="w-full" src="./assets/feni.png" alt="">
             </div>
-            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0">
                 <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
                     <img src="./assets/coin.png" alt="">
                     <button class=" font-bold text-lg flex"> <span id="text-value-2">600</span> BDT</button>
@@ -85,11 +85,11 @@
             </div>
         </div>
         <!-- 3rd Card Start  -->
-        <div class="flex border rounded-3xl">
-            <div class="w-[45%] px-8 py-8">
+        <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
+            <div class="w-full md:w-[45%] px-8 py-8">
                 <img class="w-full" src="./assets/quota-protest.png" alt="">
             </div>
-            <div class="px-8 w-[55%] flex flex-col justify-evenly">
+            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0 ">
                 <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
                     <img src="./assets/coin.png" alt="">
                     <button class=" font-bold text-lg flex"> <span id="text-value-3">2400</span> BDT</button>
