all tab responsive

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="bg-orange-50">
-            <div class="flex justify-between container mx-auto items-center py-7">
+            <div class="flex md:flex-row flex-col justify-between container mx-auto items-center py-7 space-y-2">
                 <div>
                     <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg" id="home-page">Home</button>
                 </div>
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <main class="container mx-auto space-y-1">
+    <main class="container mx-auto space-y-1 px-7">
         <h1 class="text-5xl font-semibold my-12">Important FAQ <img src="./assets/faq.png" class="w-10 inline" alt="">
         </h1>
         <div class="collapse collapse-arrow bg-base-200">
@@ -64,7 +64,7 @@
             console.log('home click')
         })
     </script>
-    <script src="../blog/index.html"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
