--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header class="sticky top-0 ">
         <nav class="bg-orange-50">
-            <div class="flex flex-col md:flex md:flex-row md:justify-between container mx-auto items-center py-7 space-y-3 md:space-y-0">
+            <div
+                class="flex flex-col md:flex md:flex-row md:justify-between container mx-auto items-center py-7 space-y-3 md:space-y-0">
                 <div>
                     <button class="px-7 py-2 bg-[#B4F461] rounded-md font-bold text-lg" id="blog-page">Blog</button>
                 </div>
@@ -24,93 +25,100 @@
                 </div>
             </div>
         </nav>
-        <div class="text-center space-x-4 mt-16">
-            <button id="change-btn-1" class="px-7 py-2 border border-gray-200 bg-[#B4F461] rounded-md font-bold text-lg">Donation</button>
-            <button id="change-btn-2" class="px-7 py-2 border border-gray-200  rounded-md font-bold text-lg">History</button>
+        <div class="text-center space-x-4 mt-12">
+            <button id="change-btn-1"
+                class="px-7 py-2 border border-gray-200 bg-[#B4F461] rounded-md font-bold text-lg">Donation</button>
+            <button id="change-btn-2"
+                class="px-7 py-2 border border-gray-200  rounded-md font-bold text-lg">History</button>
         </div>
     </header>
     <!-- -----------Main section Start ----------  -->
-    <main >
+    <main>
         <div id="donation-part" class="mt-9 container mx-auto px-10 space-y-6">
             <!-- 1st Card Start  -->
-        <div class="flex flex-col md:flex-row border rounded-3xl pb-5 md:pb-0">
-            <div class="w-full md:w-[45%] px-8 py-8">
-                <img class="w-full" src="./assets/noakhali.png" alt="">
-            </div>
-            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3">
-                <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
-                    <img src="./assets/coin.png" alt="">
-                    <button class=" font-bold text-lg flex"> <span id="text-value-1">0</span> BDT</button>
+            <div class="flex flex-col md:flex-row border rounded-3xl pb-5 md:pb-0">
+                <div class="w-full md:w-[45%] px-8 py-8">
+                    <img class="w-full" src="./assets/noakhali.png" alt="">
                 </div>
+                <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3">
+                    <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
+                        <img src="./assets/coin.png" alt="">
+                        <button class=" font-bold text-lg flex"> <span id="text-value-1">0</span> BDT</button>
+                    </div>
 
-                <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
+                    <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
 
-                <p class=""> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
-                    donation will help provide essential supplies and to those affected by this disaster. Every
-                    contribution, big or small, makes difference. Please join us in supporting the relief efforts and
-                    making a positive impact on the lives of those in need.</p>
+                    <p class=""> The recent floods in Noakhali have caused significant damage to homes infrastructure.
+                        Your
+                        donation will help provide essential supplies and to those affected by this disaster. Every
+                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                        and
+                        making a positive impact on the lives of those in need.</p>
 
-                <input id="input-1" type="text" placeholder="Write Donation Amount"
-                    class="input input-bordered w-full max-w-full" />
+                    <input id="input-1" type="text" placeholder="Write Donation Amount"
+                        class="input input-bordered w-full max-w-full" />
 
-                <button id="donate-button-1" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
-                    Now</button>
-                
-            </div>
-        </div>
-        <!-- 2nd Card Start  -->
-        <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
-            <div class="w-full md:w-[45%] px-8 py-8">
-                <img class="w-full" src="./assets/feni.png" alt="">
-            </div>
-            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0">
-                <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
-                    <img src="./assets/coin.png" alt="">
-                    <button class=" font-bold text-lg flex"> <span id="text-value-2">600</span> BDT</button>
+                    <button id="donate-button-1" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
+                        Now</button>
                 </div>
-
-                <p class="text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</p>
-
-                <p class="">The recent floods in Feni have devastated local communities, leading to severe disruption
-                    and loss. Your generous donation will help provide immediate aid, including food, clean water, and
-                    medical supplies, to those affected by this calamity. Together, we can offer crucial support and
-                    help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
-                    real difference. Please consider donating today to assist those in urgent need.</p>
-
-                <input id="input-2" type="text" placeholder="Write Donation Amount"
-                    class="input input-bordered w-full max-w-full" />
-
-                <button id="donate-button-2" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
-                    Now</button>
             </div>
-        </div>
-        <!-- 3rd Card Start  -->
-        <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
-            <div class="w-full md:w-[45%] px-8 py-8">
-                <img class="w-full" src="./assets/quota-protest.png" alt="">
-            </div>
-            <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0 ">
-                <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
-                    <img src="./assets/coin.png" alt="">
-                    <button class=" font-bold text-lg flex"> <span id="text-value-3">2400</span> BDT</button>
+            <!-- 2nd Card Start  -->
+            <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
+                <div class="w-full md:w-[45%] px-8 py-8">
+                    <img class="w-full" src="./assets/feni.png" alt="">
                 </div>
+                <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0">
+                    <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
+                        <img src="./assets/coin.png" alt="">
+                        <button class=" font-bold text-lg flex"> <span id="text-value-2">600</span> BDT</button>
+                    </div>
 
-                <p class="text-xl font-bold">Aid for Injured in the Quota Movement</p>
+                    <p class="text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</p>
 
-                <p class="">The recent Quota movement has resulted in numerous injuries and significant hardship for
-                    many individuals. Your support is crucial in providing medical assistance, rehabilitation, and
-                    necessary supplies to those affected. By contributing, you help ensure that injured individuals
-                    receive the care and support they need during this challenging time. Every donation plays a vital
-                    role in alleviating their suffering and aiding in their recovery. Please consider making a donation
-                    to support these brave individuals in their time of need.</p>
+                    <p class="">The recent floods in Feni have devastated local communities, leading to severe
+                        disruption
+                        and loss. Your generous donation will help provide immediate aid, including food, clean water,
+                        and
+                        medical supplies, to those affected by this calamity. Together, we can offer crucial support and
+                        help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
+                        real difference. Please consider donating today to assist those in urgent need.</p>
 
-                <input id="input-3" type="text" placeholder="Write Donation Amount"
-                    class="input input-bordered w-full max-w-full" />
+                    <input id="input-2" type="text" placeholder="Write Donation Amount"
+                        class="input input-bordered w-full max-w-full" />
 
-                <button id="donate-button-3" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
-                    Now</button>
+                    <button id="donate-button-2" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
+                        Now</button>
+                </div>
             </div>
-        </div>
+            <!-- 3rd Card Start  -->
+            <div class="flex flex-col md:flex-row border rounded-3xl pb-4 md:pb-0">
+                <div class="w-full md:w-[45%] px-8 py-8">
+                    <img class="w-full" src="./assets/quota-protest.png" alt="">
+                </div>
+                <div class="px-8 w-full md:w-[55%] flex flex-col justify-evenly space-y-3 md:space-y-0 ">
+                    <div class="px-4 w-44 py-2 bg-gray-200 rounded-md flex">
+                        <img src="./assets/coin.png" alt="">
+                        <button class=" font-bold text-lg flex"> <span id="text-value-3">2400</span> BDT</button>
+                    </div>
+
+                    <p class="text-xl font-bold">Aid for Injured in the Quota Movement</p>
+
+                    <p class="">The recent Quota movement has resulted in numerous injuries and significant hardship for
+                        many individuals. Your support is crucial in providing medical assistance, rehabilitation, and
+                        necessary supplies to those affected. By contributing, you help ensure that injured individuals
+                        receive the care and support they need during this challenging time. Every donation plays a
+                        vital
+                        role in alleviating their suffering and aiding in their recovery. Please consider making a
+                        donation
+                        to support these brave individuals in their time of need.</p>
+
+                    <input id="input-3" type="text" placeholder="Write Donation Amount"
+                        class="input input-bordered w-full max-w-full" />
+
+                    <button id="donate-button-3" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
+                        Now</button>
+                </div>
+            </div>
         </div>
 
         <div id="history" class="hidden"> </div>
