all work complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button id="change-btn-1"
                 class="px-7 py-2 border border-gray-200 bg-[#B4F461] rounded-md font-bold text-lg">Donation</button>
             <button id="change-btn-2"
-                class="px-7 py-2 border border-gray-200  rounded-md font-bold text-lg">History</button>
+                class="px-7 py-2 border border-gray-200  bg-gray-100 rounded-md font-bold text-lg">History</button>
         </div>
     </header>
     <!-- -----------Main section Start ----------  -->
@@ -60,6 +60,23 @@
 
                     <button id="donate-button-1" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
                         Now</button>
+
+                    <!-- Modal 1 -->
+                    <dialog id="my_modal_1" class="modal">
+                        <div class="modal-box text-center space-y-3">
+                            <h3 class="text-3xl font-bold ">Congrates !</h3>
+                            <img src="./assets/coin.png" class="mx-auto" alt="">
+                            <p class="py-4">You have Donated for Humankind</p>
+                            <p class="py-4 text-2xl font-semibold">Successfully</p>
+                            <div class="modal-action">
+                                <form method="dialog">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close confirmation</button>
+                                </form>
+                            </div>
+                        </div>
+                    </dialog>
+
                 </div>
             </div>
             <!-- 2nd Card Start  -->
@@ -88,6 +105,23 @@
 
                     <button id="donate-button-2" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
                         Now</button>
+
+                    <dialog id="my_modal_2" class="modal">
+                        <div class="modal-box text-center space-y-3">
+                            <h3 class="text-3xl font-bold ">Congrates !</h3>
+                            <img src="./assets/coin.png" class="mx-auto" alt="">
+                            <p class="py-4">You have Donated for Humankind</p>
+                            <p class="py-4 text-2xl font-semibold">Successfully</p>
+                            <div class="modal-action">
+                                <form method="dialog">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close confirmation</button>
+                                </form>
+                            </div>
+                        </div>
+                    </dialog>
+
+
                 </div>
             </div>
             <!-- 3rd Card Start  -->
@@ -117,6 +151,23 @@
 
                     <button id="donate-button-3" class="w-full py-2 bg-[#B4F461] rounded-md font-bold text-lg">Donate
                         Now</button>
+                    
+                        <dialog id="my_modal_3" class="modal">
+                            <div class="modal-box text-center space-y-3">
+                                <h3 class="text-3xl font-bold ">Congrates !</h3>
+                                <img src="./assets/coin.png" class="mx-auto" alt="">
+                                <p class="py-4">You have Donated for Humankind</p>
+                                <p class="py-4 text-2xl font-semibold">Successfully</p>
+                                <div class="modal-action">
+                                    <form method="dialog">
+                                        <!-- if there is a button in form, it will close the modal -->
+                                        <button class="btn">Close confirmation</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </dialog>
+
+
                 </div>
             </div>
         </div>
