--- a/blog.html
+++ b/blog.html
@@ -30,14 +30,14 @@
             <input type="radio" name="my-accordion-2" checked="checked" />
             <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>Document object Model is a programming interface . It represent the html structured as a tree object.</p>
             </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
             <div class="collapse-title text-xl font-medium">How do you select an element from the Dom</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>I can select element from dom using document.getElementById()</p>
             </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
@@ -45,7 +45,7 @@
             <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why
                 is it useful?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>Event delegation is useful because it can handle events using single event listner to parent instead of individual child elements.</p>
             </div>
         </div>
         <div class="collapse collapse-arrow bg-base-200">
@@ -53,7 +53,7 @@
             <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
                 using the DOM?</div>
             <div class="collapse-content">
-                <p>hello</p>
+                <p>I can manipulate an elements using getAttribute() function.</p>
             </div>
         </div>
     </main>
